[metadata]
name = depth_rov_pkg
version = 0.1.0
description = ROS2 to MAVLink bridge
author = Tegbir Lalli
license = MIT

[options]
packages = find:
include_package_data = true
install_requires =
    rclpy
    pymavlink
zip_safe = true

[options.entry_points]
console_scripts =
    depth_from_mavlink = depth_rov_pkg.depth_from_mavlink:main

[options.package_data]
* = package.xml
