[metadata]
name = my_bridge_pkg
version = 0.1.0
description = ROS2 to MAVLink bridge
author = Tegbir Lalli
author_email = teglal28@gmail.com
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    pymavlink

[options.entry_points]
console_scripts =
    ros2_mavlink_bridge = my_bridge_pkg.ros2_mavlink_bridge:main
